facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_arrays_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
assertion_line: 495
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│[i32; 3] [1, 2, 3]  │
╰────────────────────╯
╭After───────────────╮
│[i32; 3] [1, 2, 3]  │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
