facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_enums_different_struct_variants.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────────────╮
│DetailedStatus::Active {        │
│  since: 2020,                  │
│}                               │
╰────────────────────────────────╯
╭After───────────────────────────╮
│DetailedStatus::Inactive {      │
│  reason: "maintenance",        │
│}                               │
╰────────────────────────────────╯
╔Diff════════════════════════════╗
║DetailedStatus::Active {        ║
║  since: 2020,                  ║
║} → DetailedStatus::Inactive {  ║
║  reason: "maintenance",        ║
║}                               ║
╚════════════════════════════════╝
