facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_enums_same_tuple_variant_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────╮
│Status::Pending(5) │
╰───────────────────╯
╭After──────────────╮
│Status::Pending(10)│
╰───────────────────╯
╔Diff═══════════════╗
║Pending 5 → 10     ║
╚═══════════════════╝
