facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_enums_struct_variant_different_field.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│DetailedStatus::Active {│
│  since: 2020,          │
│}                       │
╰────────────────────────╯
╭After───────────────────╮
│DetailedStatus::Active {│
│  since: 2024,          │
│}                       │
╰────────────────────────╯
╔Diff════════════════════╗
║Active {                ║
║    since: 2020 → 2024  ║
║}                       ║
╚════════════════════════╝
