facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_enums_tuple_variants_different_content.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│Message::Text("hello")  │
╰────────────────────────╯
╭After───────────────────╮
│Message::Text("world")  │
╰────────────────────────╯
╔Diff════════════════════╗
║Text "hello" → "world"  ║
╚════════════════════════╝
