facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_four_level_nesting.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────────────────────╮
│Level1 {                                       │
│  inner: Level2 {                              │
│    inner: Level3 {                            │
│      inner: Level4 {                          │
│        value: 42,                             │
│        name: "original",                      │
│      },                                       │
│      count: 10,                               │
│    },                                         │
│    enabled: true,                             │
│  },                                           │
│  label: "root",                               │
│}                                              │
╰───────────────────────────────────────────────╯
╭After──────────────────────────────────────────╮
│Level1 {                                       │
│  inner: Level2 {                              │
│    inner: Level3 {                            │
│      inner: Level4 {                          │
│        value: 100,                            │
│        name: "modified",                      │
│      },                                       │
│      count: 10,                               │
│    },                                         │
│    enabled: false,                            │
│  },                                           │
│  label: "root",                               │
│}                                              │
╰───────────────────────────────────────────────╯
╔Diff═══════════════════════════════════════════╗
║{                                              ║
║    .. 1 unchanged field                       ║
║    inner: {                                   ║
║        enabled: true → false                  ║
║        inner: {                               ║
║            .. 1 unchanged field               ║
║            inner: {                           ║
║                name: "original" → "modified"  ║
║                value: 42 → 100                ║
║            }                                  ║
║        }                                      ║
║    }                                          ║
║}                                              ║
╚═══════════════════════════════════════════════╝
