facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_options_both_some_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────╮
│Some(42)       │
╰───────────────╯
╭After──────────╮
│Some(100)      │
╰───────────────╯
╔Diff═══════════╗
║Some 42 → 100  ║
╚═══════════════╝
