facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_options_nested_structs.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────╮
│Some(User {     │
│  name: "Alice",│
│  age: 30,      │
│})              │
╰────────────────╯
╭After───────────╮
│Some(User {     │
│  name: "Alice",│
│  age: 31,      │
│})              │
╰────────────────╯
╔Diff════════════╗
║Some User {     ║
║  name: "Alice",║
║  age: 30,      ║
║} → User {      ║
║  name: "Alice",║
║  age: 31,      ║
║}               ║
╚════════════════╝
